# agent

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  biome.json  install.sh  justfile  package.json  settings.json  tsconfig.json  tsconfig.typecheck.json
.claude/: CLAUDE.md
crates/context-guard/: Cargo.toml
crates/context-guard/src/: main.rs  security_policy.rs  session_semantics.rs
crates/context-guard/tests/: core_check.rs
docs/: luan-feature-decisions.md
global/: AGENTS.md  CLAUDE.md
harnesses/claude/: README.md  settings.json
harnesses/codex/: README.md  config.toml  hooks.json  packages.json
harnesses/pi/: README.md  effort.json  keybindings.json  settings.json  tui.json  vcc-config.json
rules/: artifact-readability.md  blueprints.md  context-budget.md  harness-compat.md  human-approval.md  plannotator-gates.md  pr-workflow.md  rust.md  style.md  test-quality.md
skills/acceptance/: SKILL.md
skills/archive/: SKILL.md
skills/bootstrap-web/: SKILL.md
skills/commit/: SKILL.md
skills/context/: SKILL.md
skills/converge/: SKILL.md
skills/daily/: SKILL.md
skills/debug/: SKILL.md
skills/diagnose/: SKILL.md
skills/fix/: SKILL.md
skills/git-surgeon/: SKILL.md
skills/gt/: SKILL.md
skills/implement/: SKILL.md
skills/improve-rust-tests/: SKILL.md
skills/plannotator-annotate/: SKILL.md
skills/pr-plan/: SKILL.md
skills/refine/: SKILL.md
skills/report/: SKILL.md
skills/research/: SKILL.md
tests/: blueprint-cli.test.ts  git-surgeon-cli.test.ts  install.test.ts  skill-validator.test.ts  workflow-contracts.test.ts
(+280 files in other folders)
