[package]
name = "context-guard"
version = "1.0.136"
edition = "2024"
license = "Elastic-2.0"
description = "Context layer for coding agents that guards large outputs with code processing, indexing, and search."
publish = false

[[bin]]
name = "context-guard"
path = "src/main.rs"

[dependencies]
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
rusqlite = { version = "^0.39", features = ["bundled"] }
reqwest = { version = "^0.12", default-features = false, features = ["blocking", "rustls-tls"] }
sha2 = "^0.10"
chrono = { version = "^0.4", default-features = false, features = ["clock", "std"] }
regex = "^1"
